--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 docker build --pull --rm -f "Dockerfile" -t droolwb:latest "." 
+
+
+GIT PORT : 8001
+
+Maven Repo
+ http://localhost:8080/business-central/maven2
